# povhuman

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Anchor.toml  CHANGELOG.md  Dockerfile  PRD.md  README.md  dashboard.html  docker-compose.yml  eslint.config.js  hardhat.config.cts  landing.html  package-lock.json  package.json  tsconfig.hardhat.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
contracts/: VerifyHumanReceipts.sol
docs/: cost-model.md  latency-budget.md  security-checklist.md  streaming-guide.md
e2e/: playwright.config.ts  smoke.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
outreach/: leads.csv  non_reddit_threads.csv  reddit_threads.csv
programs/verify_human/: Cargo.toml
programs/verify_human/src/: error.rs  lib.rs  state.rs
programs/verify_human/src/instructions/: cancel_and_refund.rs  claim_task.rs  complete_and_release.rs  create_task.rs  initialize.rs  mod.rs  verify_checkpoint.rs
scripts/: deploy.ts  init-program.ts
skills/world-through-my-eyes/: SKILL.md  clawhub.json
src/: config.ts  logger.ts  server.ts  test-helpers.ts
src/agents/: delivery.ts  policy-gateway.ts  types.ts
src/attestation/: challenges.ts  index.ts  trust-score.ts  verifier.ts
src/chain/: client.ts  types.ts
src/checkpoints/: composite-scorer.ts  evaluator.ts  gps.ts  ip-geo.ts  types.ts
src/conditions/: combiner.test.ts  combiner.ts  presets.test.ts  presets.ts
src/db/: retention.test.ts  retention.ts  schema.test.ts  schema.ts  seed.ts
(+92 files in other folders)
